Fixing navbar's menu z-index.

--- a/public/stylesheets/components/buttons/Button.module.css
+++ b/public/stylesheets/components/buttons/Button.module.css
@@ -228,6 +228,7 @@
     width: 40px;
     height: 40px;
     margin: auto 0px auto auto;
+    z-index: 1;
 }
 @media screen and (max-width: 992px) {
     .navigationButton {
